# ai-job-search-helper

./: .env.example  .gitattributes  pyproject.toml
app/: main.py
app/ai/: client.py
app/api/routers/: ai.py  cv.py  health.py  jobs.py
app/config/: settings.py
app/models/domain/: candidate.py  common.py  evaluation.py  vacancy.py
app/parsers/: cv_parser.py  dou_parser.py  pdf_parser.py
app/scrapers/dou/: dou_client.py  dou_scraper.py
app/services/: cv_pars_service.py  vacancy_parse_service.py
app/utils/: prompt_loader.py
docs/dev_progres/: project_review_phase1.md
prompts/: parse_vacancy_system_prompt.md
